# Tunaar

./: .dockerignore  .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  config.example.json  docker-compose.yml  pyproject.toml  run.py  tunaar.sh
.github/: AUTOPILOT.md  dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: autofix.yml  autopilot-approved.yml  autopilot-selfheal.yml  cla.yml  docker-publish.yml  feature-queue.yml  labels-sync.yml  pages.yml  release.yml  selftest.yml  triage.yml
docs/: index.html  install.html  nas.html  user-guide.html
hooks/: README.md
hooks/examples/: file_issue.js  file_issue.sh
hooks/python/: autopilot_hooks.py
licensing-server/: Dockerfile  README.md  fly.toml  render.yaml  webhook.py
plexiptv/: __init__.py  app.py  config.py  m3u.py
scripts/: gen_announcements.py  sign_license.py
tests/: __init__.py  test_app.py  test_config.py  test_console.py  test_discovery.py  test_epg.py  test_features.py  test_feedback.py  test_license.py  test_m3u.py  test_netguard.py  test_proxy.py  test_selfupdate.py  test_webhook.py
tunaar/: __init__.py  _ed25519.py  app.py  config.py  discovery.py  dockerapi.py  epg.py  feedback.py  license.py  logbus.py  m3u.py  netguard.py  presets.py  proxy.py  selfupdate.py
tunaar/static/: style.css
tunaar/templates/: about.html  console.html  dashboard.html
unraid/: tunaar.xml
